Header animation runs after window.onload

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -1,161 +1,181 @@
+.load-end {
+  .character1 {
+    animation: fade-in-1 0.3s 1s ease-in-out forwards;
+    @keyframes fade-in-1 {
+      0% {
+        opacity: 0;
+        transform: translateX(200px);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+  }
+
+  .character2 {
+    animation: fade-in-2 0.3s 1.15s ease-in-out forwards;
+    @keyframes fade-in-2 {
+      0% {
+        opacity: 0;
+        transform: translateX(200px);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+  }
+
+  .character3 {
+    animation: fade-in-3 0.3s 1.3s ease-in-out forwards;
+    @keyframes fade-in-3 {
+      0% {
+        opacity: 0;
+        transform: translateX(-200px);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+  }
+
+  .character4 {
+    animation: fade-in-4 0.3s 1.45s ease-in-out forwards;
+    @keyframes fade-in-4 {
+      0% {
+        opacity: 0;
+        transform: translateX(-200px);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+  }
+
+  .splat1 {
+    animation: fade-in-5 0.3s 1.6s ease-in-out forwards;
+    @keyframes fade-in-5 {
+      0% {
+        opacity: 0;
+        transform: scale(0.3);
+      }
+
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  }
+
+  .splat2 {
+    animation: fade-in-5 0.3s 1.75s ease-in-out forwards;
+    @keyframes fade-in-5 {
+      0% {
+        opacity: 0;
+        transform: scale(0.3);
+      }
+
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  }
+
+  .logo {
+    animation: fade-in-5 0.3s 1.9s ease-in-out forwards;
+    @keyframes fade-in-5 {
+      0% {
+        opacity: 0;
+        transform: scale(0.3);
+      }
+
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  }
+
+  .button {
+    animation: fade-in-6 0.3s 2s ease-in-out forwards;
+    @keyframes fade-in-6 {
+      0% {
+        opacity: 0;
+        transform: scale(0.3);
+      }
+
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  }
+
+  .effect {
+    animation: fade-in-7 0.3s 2.15s ease-in-out forwards;
+    @keyframes fade-in-7 {
+      0% {
+        opacity: 0;
+        transform: translateX(-200px) rotate(-20deg);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateX(0) rotate(0deg);
+      }
+    }
+  }
+}
+
 .character1 {
   opacity: 0;
   transform: translateX(200px);
-
-  animation: fade-in-1 0.3s 1s ease-in-out forwards;
-  @keyframes fade-in-1 {
-    0% {
-      opacity: 0;
-      transform: translateX(200px);
-    }
-
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
 }
 
 .character2 {
   opacity: 0;
   transform: translateX(200px);
-
-  animation: fade-in-2 0.3s 1.15s ease-in-out forwards;
-  @keyframes fade-in-2 {
-    0% {
-      opacity: 0;
-      transform: translateX(200px);
-    }
-
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
 }
 
 .character3 {
   opacity: 0;
   transform: translateX(-200px);
-
-  animation: fade-in-3 0.3s 1.3s ease-in-out forwards;
-  @keyframes fade-in-3 {
-    0% {
-      opacity: 0;
-      transform: translateX(-200px);
-    }
-
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
 }
 
 .character4 {
   opacity: 0;
   transform: translateX(-200px);
-
-  animation: fade-in-4 0.3s 1.45s ease-in-out forwards;
-  @keyframes fade-in-4 {
-    0% {
-      opacity: 0;
-      transform: translateX(-200px);
-    }
-
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
 }
 
 .splat1 {
   opacity: 0;
   transform: scale(0.3);
-
-  animation: fade-in-5 0.3s 1.6s ease-in-out forwards;
-  @keyframes fade-in-5 {
-    0% {
-      opacity: 0;
-      transform: scale(0.3);
-    }
-
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
 }
 
 .splat2 {
   opacity: 0;
   transform: scale(0.3);
-
-  animation: fade-in-5 0.3s 1.75s ease-in-out forwards;
-  @keyframes fade-in-5 {
-    0% {
-      opacity: 0;
-      transform: scale(0.3);
-    }
-
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
 }
 
 .logo {
   opacity: 0;
   transform: scale(0.3);
-
-  animation: fade-in-5 0.3s 1.9s ease-in-out forwards;
-  @keyframes fade-in-5 {
-    0% {
-      opacity: 0;
-      transform: scale(0.3);
-    }
-
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
 }
 
 .button {
   opacity: 0;
   transform: scale(0.3);
-
-  animation: fade-in-6 0.3s 2s ease-in-out forwards;
-  @keyframes fade-in-6 {
-    0% {
-      opacity: 0;
-      transform: scale(0.3);
-    }
-
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
-  }
 }
 
 .effect {
   opacity: 0;
   transform: translateX(-200px) rotate(-20deg);
-
-  animation: fade-in-7 0.3s 2.15s ease-in-out forwards;
-  @keyframes fade-in-7 {
-    0% {
-      opacity: 0;
-      transform: translateX(-200px) rotate(-20deg);
-    }
-
-    100% {
-      opacity: 1;
-      transform: translateX(0) rotate(0deg);
-    }
-  }
 }
