--- a/components/Hardware.module.scss
+++ b/components/Hardware.module.scss
@@ -1,5 +1,5 @@
 .header {
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   opacity: 0;
   transform: scale(0);
   &.start {
@@ -10,7 +10,7 @@
 
 .hardware-wrapper {
   & > div {
-    transition: all 0.5s ease-in-out;
+    transition: all 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     opacity: 0;
     transform: scale(0);
 
@@ -31,7 +31,7 @@
 .description-wrapper {
   & > p,
   & > div {
-    transition: all 0.5s ease-in-out;
+    transition: all 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     opacity: 0;
     transform: translateY(50px);
   }
