--- a/components/Splatlands.module.scss
+++ b/components/Splatlands.module.scss
@@ -1,7 +1,7 @@
 .box__header,
 .box__video,
 .box__btn {
-  transition: all 0.3s ease-in-out;
+  transition: all 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   opacity: 0;
 }
 
@@ -11,7 +11,7 @@
 
 .box__video,
 .box__btn {
-  transition-delay: 0.2s;
+  transition-delay: 0.3s;
   transform: scale(0);
 }
 
